viz: Enable SkiaRenderer layout test

To run layout test over SkiaRenderer, need to add flag --additional-driver-flag=--use-skia-renderer.

BUG=820356

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Ic289b19cda9cfcb96bf38217eb20b890bb808f5a
Reviewed-on: https://chromium-review.googlesource.com/1001872
Reviewed-by: weiliangc <weiliangc@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Xing Xu <xing.xu@intel.com>
Cr-Commit-Position: refs/heads/master@{#549539}
Former-commit-id: eca64db66faef47d88440aab1b9a1a842d835b71